# Aruco

EstimateMarkerPose/: CMakeCache.txt  CMakeLists.txt  EstimateMarkerPose  EstimateMarkerPose.cpp  Makefile  aruco_calibration_board_a4.yml  cmake_install.cmake
aruco_test/: CMakeLists.txt  test.cpp
