cmake_minimum_required(VERSION 2.8)
project( EstimateMarkerPose )
find_package( OpenCV REQUIRED )
find_package(aruco REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${aruco_LIB_DIR})
add_executable( EstimateMarkerPose EstimateMarkerPose.cpp)
target_link_libraries( EstimateMarkerPose ${OpenCV_LIBS} ${aruco_LIBS})